# pineapple-tracker-player

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui  player.cpp  player.h
.github/: FUNDING.yml
.github/workflows/: linux.yml  windows-msys2.yml
assets/: pineapple-tracker-player.rc
cmake/: FindPortAudio.cmake
player/: CMakeLists.txt  abstractplayer.cpp  abstractplayer.h  player.cpp  player.h  playlistmanager.cpp  playlistmanager.h  util.cpp  util.h
quick/: CMakeLists.txt  InstrumentView.qml  TrackerView.qml  main.cpp  main.qml
quick/components/: InstrumentItem.qml
quick/translations/: pineapple-tracker-player.ts  pineapple-tracker-player_de.ts  pineapple-tracker-player_nl.ts  pineapple-tracker-player_pl.ts  pineapple-tracker-player_tr.ts  pineapple-tracker-player_zh_CN.ts
widget/: CMakeLists.txt  audiosettingsdialog.cpp  audiosettingsdialog.h  audiosettingsdialog.ui  instrumentsmodel.cpp  instrumentsmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  trackerwidget.cpp  trackerwidget.h
